js/js.translator/testData/incremental/invalidation/toplevelPropertiesWithIntraModuleInliner/lib2/l2globalVar.8.kt
inline fun globalVarGetWrapper() =  globalVar

inline fun globalVarSetWrapper(v: String) { globalVar = v }

inline fun globalVarWrapper(): String {
    return globalVarGetWrapper()
}
